<resources>
    <string name="app_full_name">Buur App</string>
    <string name="app_name">Buur</string>
    <string name="my_profile">My profile</string>
    <string name="neighbours_chat">Neighbours chat</string>
    <string name="initiatives">Initiatives</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">Sign up</string>
    <string name="user">Username</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="enter_email_address">Enter your email address</string>
    <string name="enter_email_address_tip">We will send you and email to change your password.</string>
    <string name="email_address">Email address</string>
    <string name="forgot_password">Forgot password</string>
    <string name="add_photo">Add photo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="birthday">Date of birth (dd/mm/yyyy)</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="number">Number</string>
    <string name="street">Street</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="loading">Loading…</string>
    <string name="registration_ok">Registration done</string>
    <string name="edit_profile">Edit profile</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="create_initiative">Create initiative</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_comment">Add a comment</string>
    <string name="initiative_of">Initiative of</string>
    <string name="accept">Accept</string>
    <string name="no_messages">There are no comments</string>
    <string name="no_initiatives">There are no initiatives</string>
    <string name="no_neighbours">There are no neighbours</string>
    <string name="change_password">Change password</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="you">You</string>
    <string name="information">Information</string>
    <string name="log_out_question">Do you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="write_a_message">Write a message</string>
    <string name="forgot_password_url">https://buurapp.xs2theworld.com/password/recover/</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
