<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:ems="10"
            android:hint="@string/user"
            android:imeActionLabel="@string/ok"
            android:inputType="textCapSentences"
            android:maxLength="16"
            android:textColor="@color/gray_font"
            android:textColorHint="@color/gray_hint_font" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:ems="10"
            android:hint="@string/password"
            android:imeActionLabel="@string/ok"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/gray_font"
            android:textColorHint="@color/gray_hint_font" />

        <TextView
            android:id="@+id/forgottenPasswordText"
            style="@style/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:gravity="center"
            android:text="@string/i_forgot_my_password" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:scaleType="centerCrop"
        android:src="@drawable/im_building_background_white" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding"
        android:src="@drawable/im_logo_small" />

</RelativeLayout>
