<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/padding">


        <LinearLayout
            android:id="@+id/detailsEditContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/titleEditText"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding"
                android:hint="@string/title"
                android:imeActionLabel="@string/ok"
                android:inputType="textCapSentences"
                android:maxLength="40"
                android:textColor="@color/gray_font"
                android:textColorHint="@color/gray_hint_font" />

            <EditText
                android:id="@+id/descriptionEditText"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/description"
                android:imeActionLabel="@string/ok"
                android:inputType="textMultiLine"
                android:maxLength="140"
                android:textColor="@color/gray_font"
                android:textColorHint="@color/gray_hint_font" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ownerText"
                    style="@style/listSubItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/initiative_of"
                    android:textAllCaps="true"
                    android:textColor="@color/gray_hint_font" />

                <TextView
                    android:id="@+id/subOwnerText"
                    style="@style/listSubItemText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/you"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue" />
            </LinearLayout>

            <TextView
                android:id="@+id/titleText"
                style="@style/bigText"
                fontPath="fonts/Roboto-Light.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="center_vertical"
                android:text="Title of the initiative" />

            <TextView
                android:id="@+id/descriptionText"
                style="@style/mediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:gravity="center_vertical"
                android:lineSpacingExtra="4dp"
                android:text="Chanante ipsum dolor sit amet, no te digo ná y te lo digo tó bajonaaa veniam cartoniano churretoso. " />
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addTextFragment"
        android:layout_below="@+id/linearLayout3">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:listSelector="@android:color/transparent" />

        <TextView
            android:id="@+id/noDataText"
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:textColor="@color/dark_blue" />

    </RelativeLayout>

    <fragment
        android:id="@+id/addTextFragment"
        class="com.marcohc.android.clean.architecture.presentation.view.impl.fragment.AddTextFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:layout="@layout/add_text_fragment" />

</RelativeLayout>
